syntax = "proto3";

package com.grpc.grpcbackend;

option java_multiple_files = true;

import "google/api/annotations.proto";


service MessageService {
  rpc sendMessage(MessageRequest) returns (MessageResponse) {
    option (google.api.http) = {
      post: "/zalo/send-message"
      body: "*"
    };
  };

  rpc sendMessageNoRandomDelay(MessageRequest) returns (MessageResponse) {
    option (google.api.http) = {
      post: "/zalo/send-message-no-random-delay"
      body: "*"
    };
  };
}

message MessageRequest {
  string phone = 1;
  string template_id = 2;
  map<string, string> template_data = 3;
  string tracking_id = 4;
}

message MessageResponse {
  int32 error = 1;
  string message = 2;
  string msg_id = 3;
  int64 sent_time = 4;
  string sending_mode = 5;

  message Quota {
    string daily_quota = 1;
    string remaining_quota = 2;
  }

  Quota quota = 6;
}
